# software-linking

./: .gitignore  DISCUSSIONS.md  README.md
fortran/: Makefile  README.md  program.f90
fortran/lib/: Makefile  custom_sgemm.f90
package/python/: README.md  pyproject.toml
package/python/playground/: __init__.py  functions.py
python/: README.md  run.py
python/lib/numpy/: __init__.py
